feat: html markup

--- a/blank.html
+++ b/blank.html
@@ -29,6 +29,61 @@
 				<a href="#">구입하기</a>
 			</div>
 		</nav>
+		<section calss="scroll-section" id="scroll-section-0">
+			<h1>AirMug Pro</h1>
+			<div class="sticky-elem main-message">
+				<p>온전히 빠져들게 하는<br>최고급 세라믹</p>
+			</div>
+			<div class="sticky-elem main-message">
+				<p>주변 맛을 느끼게 해주는 <br>주변 맛 허용 모드</p>
+			</div>
+			<div class="sticky-elem main-message">
+				<p>온종일 편안한<br>맞춤형 손잡이</p>
+			</div>
+			<div class="sticky-elem main-message">
+				<p>새롭게 입가를<br>찾아온 매혹</p>
+			</div>
+		</section>
+		<section calss="scroll-section" id="scroll-section-1">
+			<p>
+				<strong>보통 스크롤 영역</strong>
+				<!-- lorem200 : 임의 문자열 200자까지 -->
+				Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid incidunt commodi nobis dicta quod perferendis maxime consequuntur, architecto ab provident tempora asperiores eius laboriosam facere magni ex minima quia sint magnam nesciunt esse aspernatur dolorem. Sint doloremque provident aut, delectus placeat dolore debitis illum hic accusamus adipisci natus culpa sit velit eveniet quidem! Fuga, molestias voluptatum. Quae placeat cumque iure maiores quasi possimus, velit rem doloremque nihil enim vel corrupti dolor aspernatur, perferendis quisquam a facilis perspiciatis omnis saepe? Obcaecati ad consequuntur optio temporibus sit, quos quaerat et nam eveniet quibusdam culpa. Voluptates perspiciatis fugit sed magni nobis eum excepturi provident rerum sit sint ab, odit quidem dolore debitis quos inventore recusandae id eligendi? Voluptas unde natus at, officiis, veritatis ducimus veniam odio assumenda alias deleniti error harum rerum dicta inventore sed odit, aliquid corporis cupiditate ad quas neque magnam excepturi hic quam? Necessitatibus quos sapiente officiis, cupiditate corrupti iusto accusantium? Distinctio explicabo deleniti minus consectetur expedita sint aperiam, ipsa, nisi ab cumque odit alias culpa, soluta excepturi saepe. Sunt nihil ipsum voluptas modi quisquam iure distinctio ab illum tenetur cupiditate excepturi et cum iusto error consequuntur est, culpa sint nesciunt! Quo nostrum odit, doloribus at velit nobis voluptate est.
+			</p>
+		</section>
+		<section calss="scroll-section" id="scroll-section-2">
+			<div class="sticky-elem main-message">
+				<p>
+					<small>편안함 촉감</small>
+					입과 하나 되다
+				</p>
+				<div class="sticky-elem desc-message">
+					<p>
+						편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를 하나하나 새롭게 살피고 재구성하는 과정을 거쳐 새로운 수준의 머그, AirMug Pro를 만들었습니다. 입에 뭔가 댔다는 감각은 어느새 사라지고 오롯이 당신과 음료만 남게 되죠.
+					</p>
+					<div class="pin"></div>
+				</div>
+				<div class="sticky-elem desc-message">
+					<p>
+						디자인 앤 퀄리티 오브 스웨덴,<br>메이드 인 차이나
+					</p>
+					<div class="pin"></div>
+				</div>
+			</div>
+		</section>
+		<section calss="scroll-section" id="scroll-section-3">
+			<p class="mid-message">
+				<strong>Retina 머그</strong>
+				아이디어를 광활하게 펼칠<br>
+				아름답고 부드러운 음료 공간.
+			</p>
+			<p class="canvas-caption">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos cumque fuga sequi recusandae tempora alias officia. Autem repellat unde quam exercitationem, voluptas suscipit corporis sit deleniti laudantium tempore fugiat, doloremque magnam expedita aliquid sunt molestias nihil, tempora voluptates qui veniam culpa eum necessitatibus. Enim voluptatibus, laudantium quos sint mollitia perferendis iste praesentium veniam cum molestiae consequuntur minima porro numquam minus unde illum corporis. Aut, ipsa eum sequi officia quidem aliquam fugiat sed consectetur odit ab nulla nihil nemo id, debitis error quam in iste numquam! Nihil earum soluta, aut debitis quisquam reprehenderit ea tempore modi. Quis earum laborum sequi suscipit totam! Culpa odit non nesciunt quisquam sapiente labore deserunt, vitae veniam harum beatae! Consequatur similique quas iure nam aspernatur accusantium earum, impedit consequuntur animi quae repellat a alias. Error aut similique voluptate esse suscipit. Ipsum voluptatibus placeat rerum consectetur vitae architecto, dolor veritatis dicta libero dignissimos dolorem voluptatem soluta consequatur.
+			</p>
+		</section>
+		<footer class="footer">
+			2022, Apeachicetea
+		</footer>
 	</div>
 </body>
 </html>
