feat: section 0, 1 style

--- a/blank.html
+++ b/blank.html
@@ -29,7 +29,7 @@
 				<a href="#">구입하기</a>
 			</div>
 		</nav>
-		<section calss="scroll-section" id="scroll-section-0">
+		<section class="scroll-section" id="scroll-section-0">
 			<h1>AirMug Pro</h1>
 			<div class="sticky-elem main-message">
 				<p>온전히 빠져들게 하는<br>최고급 세라믹</p>
@@ -44,14 +44,14 @@
 				<p>새롭게 입가를<br>찾아온 매혹</p>
 			</div>
 		</section>
-		<section calss="scroll-section" id="scroll-section-1">
-			<p>
+		<section class="scroll-section" id="scroll-section-1">
+			<p class="description">
 				<strong>보통 스크롤 영역</strong>
 				<!-- lorem200 : 임의 문자열 200자까지 -->
 				Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid incidunt commodi nobis dicta quod perferendis maxime consequuntur, architecto ab provident tempora asperiores eius laboriosam facere magni ex minima quia sint magnam nesciunt esse aspernatur dolorem. Sint doloremque provident aut, delectus placeat dolore debitis illum hic accusamus adipisci natus culpa sit velit eveniet quidem! Fuga, molestias voluptatum. Quae placeat cumque iure maiores quasi possimus, velit rem doloremque nihil enim vel corrupti dolor aspernatur, perferendis quisquam a facilis perspiciatis omnis saepe? Obcaecati ad consequuntur optio temporibus sit, quos quaerat et nam eveniet quibusdam culpa. Voluptates perspiciatis fugit sed magni nobis eum excepturi provident rerum sit sint ab, odit quidem dolore debitis quos inventore recusandae id eligendi? Voluptas unde natus at, officiis, veritatis ducimus veniam odio assumenda alias deleniti error harum rerum dicta inventore sed odit, aliquid corporis cupiditate ad quas neque magnam excepturi hic quam? Necessitatibus quos sapiente officiis, cupiditate corrupti iusto accusantium? Distinctio explicabo deleniti minus consectetur expedita sint aperiam, ipsa, nisi ab cumque odit alias culpa, soluta excepturi saepe. Sunt nihil ipsum voluptas modi quisquam iure distinctio ab illum tenetur cupiditate excepturi et cum iusto error consequuntur est, culpa sint nesciunt! Quo nostrum odit, doloribus at velit nobis voluptate est.
 			</p>
 		</section>
-		<section calss="scroll-section" id="scroll-section-2">
+		<section class="scroll-section" id="scroll-section-2">
 			<div class="sticky-elem main-message">
 				<p>
 					<small>편안함 촉감</small>
@@ -71,7 +71,7 @@
 				</div>
 			</div>
 		</section>
-		<section calss="scroll-section" id="scroll-section-3">
+		<section class="scroll-section" id="scroll-section-3">
 			<p class="mid-message">
 				<strong>Retina 머그</strong>
 				아이디어를 광활하게 펼칠<br>
